[AV2-525] fixed button text and height issues. did some alignment fixes.

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -86,6 +86,15 @@ ion-item.no-bg {
   margin-right: 16px;
 }
 
+.support-mobile {
+  ion-item {
+    --inner-padding-end: 0;
+    ion-icon{
+      margin-right: 0;
+    }
+  }
+}
+
 @media screen and (max-width: 1020px) {
   .empat-col {
     display: none !important;
